sfdx-source/force-app/main/default/objects/Encrypted_Fields_Configuration__mdt/Encrypted_Fields_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>LEM-2255: This configuration will be used to show encrypted fields of an object through ViewEncryptedData
    lightning web component. It stores component location, object api name, encrypted field set name.</description>
    <label>Encrypted Fields Configuration</label>
    <pluralLabel>Encrypted Fields Configurations</pluralLabel>
</CustomObject>