sfdx-source/force-app/main/default/objects/Encrypted_Fields_Configuration__mdt/fields/Component_Location__c.field-meta.xml
<CustomField>
    <fullName>Component_Location__c</fullName>
    <description>LEM-2255: Indicates the object name on which viewEncryptedData lightning web component will be added.</description>
    <label>Component Location</label>
    <length>65</length>
    <type>Text</type>
</CustomField>