sfdx-source/force-app/main/default/objects/Encrypted_Fields_Configuration__mdt/fields/Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Api_Name__c</fullName>
    <description>LEM-2255: Indicates the object api name for loading the encrypted fields.</description>
    <label>Object Api Name</label>
    <length>45</length>
    <type>Text</type>
</CustomField>