sfdx-source/force-app/main/default/objects/Encrypted_Fields_Configuration__mdt/listViews/All_Values.listView-meta.xml
<ListView>
    <fullName>All_Values</fullName>
    <columns>MasterLabel</columns>
    <columns>Component_Location__c</columns>
    <columns>Object_Api_Name__c</columns>
    <columns>FieldSet_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Values</label>
</ListView>